k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  namespace: default
spec:
  selector:
    app: task-manager
  ports:
    - name: http
      protocol: TCP
      port: 80        
      targetPort: 8080  
  type: NodePort #НЕ ТРОЖЬ
